se agrega funcion nueva y se hace cambios en el citio

--- a/views/login/login_form.phtml
+++ b/views/login/login_form.phtml
@@ -21,6 +21,10 @@ $('#frameid').load(function(){
                      divLogin('<?php echo BASE_URL;?>login/divLogin');
                      fadeIn('LoginStatus');
                      $( ".resBloque" ).attr( 'href', '#myModal' );
+                     $('#loginInNav').css({
+                            'display': 'none'
+                        });
+                        fadeIn('loginOutNav');
                 } else {
                     fadeIn('loginPopup');
                     
