se quita coma adicional

--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -105,7 +105,7 @@
                                                                     <?php } if($objProg->getItiVuelo()) { ?>
                                                                     
                                                                     <a data-toggle="modal" href="#myModal" 
-                                                                    onClick="abrePopup('divPopupPRG', '<?php echo BASE_URL;?>bloqueos/itinerarioVuelo', 'tituloFormPRG', 'Itinerario vuelo', '<?php echo $objProg->getId(); ?>',,'<?php echo $this->form;?>');">
+                                                                    onClick="abrePopup('divPopupPRG', '<?php echo BASE_URL;?>bloqueos/itinerarioVuelo', 'tituloFormPRG', 'Itinerario vuelo', '<?php echo $objProg->getId(); ?>','<?php echo $this->form;?>');">
                                                                     <img src="<?php echo $_layoutParams['ruta_img']; ?>avion.png" width="24px" alt="Itinerario de Vuelos" title="Itinerario de Vuelos" />
                                                                     </a>
                                                                     
