--- a/views/programas/centerBox/detallePasajeros.phtml
+++ b/views/programas/centerBox/detallePasajeros.phtml
@@ -1,7 +1,7 @@
 <?php //echo Session::get('sess_distribucionPax'); ?>
 <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" align="center">
     <tr>
-        <td style="font-size: 12px; text-align: center"> NOMBRE</td>
+        <td style="font-size: 12px; text-align: center"> NOMBRE PROGRAMA</td>
         <td style="font-size: 12px; text-align: center"> CIUDAD</td>
         <td style="font-size: 12px; text-align: center"> TOTAL A PAGAR</td>
     </tr>
