--- a/views/programas/programas.phtml
+++ b/views/programas/programas.phtml
@@ -40,6 +40,27 @@
 
                 </div>
                 
+                <div class="modal-content" id="condicionesPopup" style="position: fixed; left: 200px; top:10%; bottom: 10%; right: 210px; z-index: 9999; display: none;">
+                    <div class="modal-header">
+                        <button type="button" class="close" id="btnCerrarCon" style="display:block" onclick="fadeOut('condicionesPopup');fadeOut('detallePopup');">&times;</button>
+                        <h4 class="modal-title" id="tituloPopup">Condiciones</h4>
+                    </div>
+
+                    <div class="modal-body" id="divPopupCon" style="max-height: 400px;  overflow-y: scroll;">
+                        
+                        
+                    </div>
+                    <div class="modal-footer">
+                        <center>
+                            <table >
+                                <tr>
+                                    <td>He leido y acepto las condiciones</td>
+                                    <td><input type="checkbox" id="checkCondiciones"onclick="fadeOut('condicionesPopup');"></td>
+                                </tr>
+                            </table>
+                        </center>
+                    </div>
+                </div>
                 
                 
                 
@@ -159,8 +180,8 @@
                 <?php } ?>
                 
             </div>
-            <div class="modal-content alert-info" id="LoginStatus" style="position: fixed; left: 7%; top:85%; bottom: 5%; right: 210px; z-index: 9999;width: 160px; height: 75px; <?php if(!Session::get('Autenticado') || $this->form==='a' || $this->form===''){echo 'display: none;';}?>">
-                    <div class="modal-body" id="divLoginStatusIn" style="max-height: 400px; ">
+            <div class="modal-content alert-info" id="LoginStatus" style="position: fixed; left: 1%; top:90%; bottom: 5%; right: 210px; z-index: 9999;width: 160px; height: 65px; <?php if(!Session::get('Autenticado') || $this->form==='a' || $this->form===''){echo 'display: none;';}?>">
+                    <div class="modal-body" id="divLoginStatusIn" style="max-height: 400px; padding-top: 8px;">
                           <table>
                             <tr><td>Usuario :</td><td><?php echo Session::get('sess_clave_usuario');  ?></td></tr>
                             <tr><td>Perfil : </td><td><?php echo Session::get('level');  ?></td></tr>
