se a chica titulo

--- a/views/programas/programas.phtml
+++ b/views/programas/programas.phtml
@@ -19,7 +19,7 @@
                 <li><a href="<?php echo BASE_URL . 'system'; ?>">Inicio</a></li>
                 <li class="active">Busqueda de programas</li>
             </ol>
-            <h1>PROGRAMAS EN <b style="color:#FF9900;"><?php echo $this->objCiudadBs[0]->getNombre(); ?></b></h1>
+            <h2 style="margin-left: 18px;">PROGRAMAS EN <b style="color:#FF9900;"><?php echo $this->objCiudadBs[0]->getNombre(); ?></b></h2>
 
         </div>
         <div class="container">
