--- a/views/bloqueos/centerBox/opcionesPrograma.phtml
+++ b/views/bloqueos/centerBox/opcionesPrograma.phtml
@@ -69,10 +69,20 @@ if($this->objOpcBloqueos) {
     
     
     <?php } 
-    $OP_valores = $objOpcProg->getValorHab()
+    $OP_valores = $objOpcProg->getValorHab();
+    $OP_tipoHabi= $objOpcProg->getTipoHab();
     ?>
     
-    <td style="color:#F00; text-align:right;" width="105px" rowspan="<?php echo $i; ?>"><?php echo Functions::formatoValor($objOpcProg->getMoneda(), ($OP_valores[0] + $OP_valores[1] + $OP_valores[2])); ?></td>
+    <td style="color:#F00; text-align:right; " width="105px" rowspan="<?php echo $i; ?>">
+        <span class="tooltip" style="opacity: 1;color:#F00;"onmouseover="tooltip.pop(this,'<?php if(isset($OP_tipoHabi[0]) && $OP_tipoHabi[0]!='')
+{echo 'Habitacion 1: '.$OP_tipoHabi[0].'<br>';}
+if( isset($OP_tipoHabi[1])&&$OP_tipoHabi[1]!=''){
+echo 'Habitacion 2: '.$OP_tipoHabi[1].'<br>';}
+if(isset($OP_tipoHabi[2])&&$OP_tipoHabi[2]!='')
+{echo 'Habitacion 3: '.$OP_tipoHabi[2].'<br>';}?>',{position:0})" >
+           <?php echo Functions::formatoValor($objOpcProg->getMoneda(), ($OP_valores[0] + $OP_valores[1] + $OP_valores[2])); ?>
+        </span>
+    </td>
     
     <td width="24px" rowspan="<?php echo $i; ?>">
         <a data-toggle="modal"  <?php if($this->form ==='a' || Session::get('Autenticado') ){echo'href="#myModal"';}?> 
@@ -87,3 +97,4 @@ if($this->objOpcBloqueos) {
 } else { ?>
 Ha ocurrido un error en la carga de opciones!
 <?php } ?>
+
