--- a/views/bloqueos/centerBox/reservarPrograma.phtml
+++ b/views/bloqueos/centerBox/reservarPrograma.phtml
@@ -258,7 +258,7 @@ if(Session::get('sess_BP_cntInf')>0)
 <br />
 <center>
 <input type="button"  id="rP_btnProcesaRserva" class="btn btn-primary" value="Reservar" 
-    onclick="procesoReservaPRG('frmReservaPRG', '<?php echo BASE_URL ?>bloqueos/procesoReserva', 'rP_btnProcesaRserva', 'divPopupPRG','<?php echo $this->form;?>'); ">
+    onclick="procesoReservaPRG('frmReservaPRG', '<?php echo BASE_URL ?>bloqueos/procesoReserva', 'rP_btnProcesaRserva', 'divPopupPRG','<?php echo $this->form;?>','<?php echo BASE_URL?>bloqueos/bloqueosCondiciones'); ">
 </center>
    
 </form>
