--- a/views/programas/programas.phtml
+++ b/views/programas/programas.phtml
@@ -54,8 +54,16 @@
                         <center>
                             <table >
                                 <tr>
+                                    <td style="width: 20px;"><input type="checkbox" id="checkCondiciones"></td>
                                     <td>He leido y acepto las condiciones</td>
-                                    <td><input type="checkbox" id="checkCondiciones"onclick="fadeOut('condicionesPopup');"></td>
+                                                                      
+                                </tr>
+                            </table>
+                            <br>
+                            <table style="height: 30px; width: 219px;">
+                                <tr>
+                                <td><input type="button" class="btn btn-primary " id="aceptarCondiciones" value="Aceptar"></td>
+                                    <td><input type="button"class="btn btn-primary  pull-right"onclick="fadeOut('condicionesPopup');fadeOut('detallePopup');" value="Cancelar"></td>
                                 </tr>
                             </table>
                         </center>
