--- a/views/programas/centerBox/detalleProg.phtml
+++ b/views/programas/centerBox/detalleProg.phtml
@@ -152,10 +152,11 @@ if($this->objOpcProgramas) {
             <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" style="font-size:12px; width: 100%; margin-top: 20px;" align='center'> <!-- class="table table-striped table-bordered" -->
                 <thead>
                     <tr style="background-color:#34495e; color: #FFFFFF" role="row">
-                        <th role="columnheader" style="padding-left: 2px;">Hotel</th>
-                        <th role="columnheader" style="padding-left: 2px; width: 300px;">Direcci&oacute;n</th>
+                        <th role="columnheader" style="padding-left: 2px;width: 122px;">Hotel</th>
+                        <!--<th role="columnheader" style="padding-left: 2px; width: 300px;">Direcci&oacute;n</th>-->
                         <th role="columnheader" style="padding-left: 2px; width: 80px;">Categoria</th>
                         <th role="columnheader" style="padding-left: 2px; width: 100px;">Habitaci&oacute;n</th>
+                        <th role="columnheader" style="padding-left: 2px; width: 100px;">Plan Alimenticio</th>
                         <th role="columnheader" style="padding-left: 2px; width: 50px;"></th>
                         <th role="columnheader" style="padding-left: 2px; width: 50px;"></th>
                         <th role="columnheader" style="padding-left: 2px; width: 50px;"></th>
@@ -170,6 +171,7 @@ if($this->objOpcProgramas) {
                 $DP_catHot= $objOpcProg->getCat();
                 $DP_thHot= $objOpcProg->getTipoHab();
                 $DP_codthHot= $objOpcProg->getCodTH();
+                $DP_planAl=$objOpcProg->getPlanAl();
                 $DP_cntHoteles = count($objOpcProg->getNombreHotel());
                 
                 for($i = 0; $i < $DP_cntHoteles; $i++) {
@@ -178,7 +180,7 @@ if($this->objOpcProgramas) {
                         <td style="color: #DF5F00; padding: 2px; vertical-align: middle;">
                             <a id="tooltip_hotel_<?php echo $objOpcProg->getClaveOpc(); ?>"  style="cursor:pointer"><?php echo $DP_hoteles[$i]; ?></a>
                         </td>
-                        <td style="padding: 2px; vertical-align: middle;"><?php echo $DP_dirHot[$i]; ?></td>
+                        <!--<td style="padding: 2px; vertical-align: middle;"><?php echo $DP_dirHot[$i]; ?></td>-->
                         <td style="padding: 2px; vertical-align: middle;">
                             <?php
                             if(strlen($DP_catHot[$i])==2) {
@@ -191,11 +193,15 @@ if($this->objOpcProgramas) {
                                 }
                             } else { echo $DP_catHot[$i]; } ?>
                         </td>
+                        
                         <td style="padding: 2px; vertical-align: middle;">
                             <a data-toggle='modal' href='#myModal' 
                                 onClick="fadeIn('detallePopup'); $('#divPopupIn').css('overflow-y', 'scroll'); abrePopupHab('divPopupIn', '<?php echo BASE_URL; ?>bloqueos/fotosTipoHab', 'tituloPopup', 'Fotos Tipo Habitaci&oacute;n', '<?php echo $DP_codthHot[$i]; ?>', <?php echo $DP_cod_hoteles[$i]; ?>,'<?php echo $this->form;?>');">
                                 <?php echo $DP_thHot[$i]; ?>
                             </a>
+                        </td>
+                        <td style="padding: 2px; vertical-align: middle;">
+                            <?php echo $DP_planAl[$i]; ?>
                         </td>
                         <td>
                             <a data-toggle="modal" href="#myModal" 
@@ -228,9 +234,9 @@ if($this->objOpcProgramas) {
                     <td style="font-size: 12px; text-align: center"> SINGLE </td>
                     <td style="font-size: 12px; text-align: center"> DOBLE </td>
                     <td style="font-size: 12px; text-align: center"> TRIPLE </td>
-                    <td style="font-size: 12px; text-align: center"> PLAN FAMILIAR </td>
                     <td style="font-size: 12px; text-align: center"> CHILD 1</td>
                     <td style="font-size: 12px; text-align: center"> CHILD 2 </td>
+                    <td style="font-size: 12px; text-align: center"> PLAN FAMILIAR </td>
                     <td style="font-size: 12px; text-align: center"> </td>
                 </tr>
 
@@ -244,14 +250,15 @@ if($this->objOpcProgramas) {
                     <td style="padding: 2px; vertical-align: middle;" align="center">
                         <label style="color: #DF5F00; font-weight: bold; font-size:20px;"><?php echo Functions::formatoValor($objOpcProg->getMoneda(), $objOpcProg->getVVenTPL()); ?></label><br>
                     </td>
-                    <td style="padding: 2px; vertical-align: middle;" align="center">
-                        <label style="color: #DF5F00; font-weight: bold; font-size:20px;"><?php if($objOpcProg->getVVenPF() == 0) { echo "--"; } else { echo Functions::formatoValor($objOpcProg->getMoneda(), $objOpcProg->getVVenPF());} ?></label><br>
-                    </td>
+                    
                     <td style="padding: 2px; vertical-align: middle;" align="center">
                         <label style="color: #DF5F00; font-weight: bold; font-size:20px;"><?php if($objOpcProg->getChd1() == 0) { echo "--"; } else { echo Functions::formatoValor($objOpcProg->getMoneda(), $objOpcProg->getChd1());} ?></label><br>
                     </td>
                     <td style="padding: 2px; vertical-align: middle;" align="center">
                         <label style="color: #DF5F00; font-weight: bold; font-size:20px;"><?php if($objOpcProg->getChd2() == 0) { echo "--"; } else { echo Functions::formatoValor($objOpcProg->getMoneda(), $objOpcProg->getChd2());} ?></label><br>
+                    </td>
+                    <td style="padding: 2px; vertical-align: middle;" align="center">
+                        <label style="color: #DF5F00; font-weight: bold; font-size:20px;"><?php if($objOpcProg->getVVenPF() == 0) { echo "--"; } else { echo Functions::formatoValor($objOpcProg->getMoneda(), $objOpcProg->getVVenPF());} ?></label><br>
                     </td>
                     <td style="padding: 2px; vertical-align: middle;" align="center">
                         
@@ -266,7 +273,10 @@ if($this->objOpcProgramas) {
                                        '<?php echo $objOpcProg->getVVenPF(); ?>',
                                        '<?php echo $objOpcProg->getMoneda(); ?>',
                                        '<?php echo $objOpcProg->getClaveOpc(); ?>',
-                                       '<?php echo $this->form?>'
+                                       '<?php echo $this->form?>',
+                                        <?php echo htmlspecialchars(json_encode($DP_thHot)) ;?>,
+                                        <?php echo htmlspecialchars(json_encode($DP_hoteles)) ;?>,
+                                        <?php echo htmlspecialchars(json_encode($DP_planAl)) ;?>
                                        );"> RESERVAR 
                         </a>
                     </td>
