Se agrega "Fecha de viaje:" en el diseño cuando se pide nombre de pasajeros

--- a/views/programas/centerBox/detallePasajeros.phtml
+++ b/views/programas/centerBox/detallePasajeros.phtml
@@ -63,7 +63,7 @@
     <div class="panel-heading">
 
         Informaci&oacuten de los pasajeros
-
+        <div style="float: right">Fecha de viaje: <?php echo $this->ML_fechaIni_PRG; ?></div>
     </div>
     
     <div class="panel-body">
