se realizan cambios

--- a/views/bloqueos/centerBox/opcionesPrograma.phtml
+++ b/views/bloqueos/centerBox/opcionesPrograma.phtml
@@ -19,9 +19,16 @@ if($this->objOpcBloqueos) {
     ?>
 
     <td style="color: #DF5F00; padding: 2px; vertical-align: middle;">
-        <a data-toggle='modal' href='#myModal' onClick="fadeIn('detallePopup'); $('#divPopupPRG').css('overflow-y', 'scroll'); abrePopup('divPopupPRG', '<?php echo  BASE_URL; ?>bloqueos/servicios', 'tituloFormPRG', '<?php echo $OP_hoteles[$i]; ?>', <?php echo $OP_codHoteles[$i] ?>,'<?php echo $this->form;?>');"id="tooltip_hotel_<?php //echo $objOpcProg->getClaveOpc(); ?>"  style="cursor:pointer"><?php echo $OP_hoteles[$i]; ?></a>
+        <a title='<?php echo $OP_ciudad[$i]; ?>'
+           style="opacity: 1;cursor:pointer" 
+           data-toggle='modal' 
+           href='#myModal' 
+           onClick="fadeIn('detallePopup'); 
+               $('#divPopupPRG').css('overflow-y', 'scroll'); 
+               abrePopup('divPopupPRG', '<?php echo  BASE_URL; ?>bloqueos/servicios', 'tituloFormPRG', '<?php echo $OP_hoteles[$i]; ?>', <?php echo $OP_codHoteles[$i] ?>,'<?php echo $this->form;?>');"
+               id="tooltip_hotel_<?php //echo $objOpcProg->getClaveOpc(); ?>" ><?php echo $OP_hoteles[$i]; ?></a>
     </td>
-    <td style="padding: 2px; vertical-align: middle;"><?php echo $OP_ciudad[$i]; ?></td>
+    <!--<td style="padding: 2px; vertical-align: middle;"><?php echo $OP_ciudad[$i]; ?></td>-->
     <td style="padding: 2px; vertical-align: middle;">
         <?php
         if(strlen($OP_cat[$i])==2) {
