--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -145,6 +145,15 @@
                                                 <div class="panel-body">
                                                     <div class="table-responsive">
                                                         <table class="table table-hover" style="margin-bottom: 0px;">
+                                                            <thead>
+                                                            <th style=" padding: 2px;">Hotel</th>
+                                                            <th style=" padding: 2px;">Categoria</th>
+                                                            <th style=" padding: 2px;">Habitaci&oacute;n</th>
+                                                            <th style=" padding: 2px;">Plan Alimenticio</th>
+                                                            <th></th>
+                                                            <th></th>
+                                                            <th></th>
+                                                            </thead>
                                                             <tbody class="selects" id="opcionesPrograma<?php echo $cnt ?>">
                                                         
         
