--- a/views/programas/centerBox/pasajeros.phtml
+++ b/views/programas/centerBox/pasajeros.phtml
@@ -5,7 +5,7 @@
         <div class="panel-heading">
             Seleccion
         </div>
-        <div class="panel-body">
+        <div class="panel-body" style="padding-top: 0px;">
             <table cellpadding="0" cellspacing="0" border="0" class="table-striped table-bordered" style="font-size:12px; width: 100%; margin-top: 20px;" align='center'>
                 <thead>
                     <tr style="background-color:#34495e; color: #FFFFFF" role="row">
