se quitan funciones.js a programas.js

--- a/views/programas/centerBox/detalleProg.phtml
+++ b/views/programas/centerBox/detalleProg.phtml
@@ -265,7 +265,7 @@ if($this->objOpcProgramas) {
                         
                         <a id="btnDP_reservar_<?php echo $cntDP; ?>" class="btn btn-success btn-sm" style="width: 88px;"
                            
-                           onclick="abrirForm('<?php echo $cntDP; ?>',
+                           onclick="Programa.prototype.abrirForm('<?php echo $cntDP; ?>',
                                        '<?php echo BASE_URL; ?>programas/pasajeros', 
                                        '<?php echo $objOpcProg->getVVenSGL(); ?>',
                                        '<?php echo $objOpcProg->getVVenDBL(); ?>',
