Corrigiendo doble ejecucion de reserva de un programa

--- a/views/programas/programas.phtml
+++ b/views/programas/programas.phtml
@@ -62,7 +62,7 @@
                             <br>
                             <table style="height: 30px; width: 219px;">
                                 <tr>
-                                <td><input type="button" class="btn btn-primary " id="aceptarCondiciones" value="Aceptar"></td>
+                                    <td><input type="button" class="btn btn-primary " id="aceptarCondiciones" onclick="Programa.prototype.aceptarCondiciones();" value="Aceptar"></td>
                                     <td><input type="button"class="btn btn-primary  pull-right"onclick="fadeOut('condicionesPopup');fadeOut('detallePopup');" value="Cancelar"></td>
                                 </tr>
                             </table>
