--- a/views/programas/centerBox/detallePasajeros.phtml
+++ b/views/programas/centerBox/detallePasajeros.phtml
@@ -177,7 +177,7 @@
             </table>
 
             <center>
-                <a id="btnReservarPrograma" id="btnReservarPrograma" class="btn btn-success" onclick="Programa.prototype.abrirCondiciones('<?php echo BASE_URL; ?>programas/programasCondiciones'); Programa.prototype.procesoEnviaFormProg('frmReservarPrograma', '<?php echo BASE_URL; ?>programas/procesoReserva', 'btnReservarPrograma', 'divPopupPRG','<?php echo $this->form;?>','<?php echo BASE_URL; ?>programas/programasCondiciones')"> RESERVAR </a>
+                <a id="btnReservarPrograma" id="btnReservarPrograma" class="btn btn-success" onclick="Programa.prototype.procesoEnviaFormProg('frmReservarPrograma', '<?php echo BASE_URL; ?>programas/procesoReserva', 'btnReservarPrograma', 'divPopupPRG','<?php echo $this->form;?>','<?php echo BASE_URL; ?>programas/programasCondiciones')"> RESERVAR </a>
             </center>
         </form>
     </div>
